tests/pass/void_ret.jolt
fn noop() void {
    ret;
}

fn main() void {
    noop();
    ret;
}
