tests/fail/unknown_name.jolt
fn main() void {
    not_a_binding();
}
